--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400;500;600;700;800&display=swap');
 
+/* CORES DOS TIPOS */
+
+:root{
+    --bug:#91c12f;
+    --dark: #5a5465;
+    --dragon: #0b6dc3;
+    --electric: #f4d23c;
+    --fairy: #ec8fe6;
+    --fighting: #ce416b;
+    --fire: #ff9d55;
+    --flying: #89aae3;
+    --ghost: #5269ad;
+    --grass: #63bc5a;
+    --ground: #d97845;
+    --ice: #73cec0;
+    --normal: #919aa2;
+    --poison: #b567ce;
+    --psychic: #fa7179;
+    --rock: #c5b78c;
+    --steel: #5a8ea2;
+    --water: #5090d6;
+}
+/* ---- */
+
 *{
     margin: 0;
     padding: 0;
@@ -51,7 +75,7 @@ main {
     position: absolute;
     background-color: red;
     width: 65%;
-    top: 65%;
+    top: 64%;
     left: 13.5%;
 }
 
@@ -91,4 +115,40 @@ main {
 .button:active{
     box-shadow: inset -4px 4px 0 #222;
     font-size: 0.9rem;
+}
+
+.types{
+    position: absolute;
+    bottom: 20%;
+    left: 50%;
+    width: 65%;
+    transform: translate(-57%, 0);
+    display: flex;
+    gap: 20px;
+}
+
+.btn-type-one{
+    width: 50%;
+    padding: 4%;
+    border: 2px solid #000;
+    font-size: clamp(8px, 5vw, 1rem);
+    border-radius: 5px;
+    box-shadow: -2px 3px 0 #222, -4px 6px 0 #000;
+    font-weight: 600;
+    background-color: #444;
+    color: white;
+    text-transform: capitalize;
+}
+
+.btn-type-two{
+    width: 50%;
+    padding: 4%;
+    border: 2px solid #000;
+    font-size: clamp(8px, 5vw, 1rem);
+    border-radius: 5px;
+    box-shadow: -2px 3px 0 #222, -4px 6px 0 #000;
+    font-weight: 600;
+    background-color: #444;
+    color: white;
+    text-transform: capitalize;
 }
